fix checkbox alignment

--- a/src/sass/components/atoms/checkbox.sass
+++ b/src/sass/components/atoms/checkbox.sass
@@ -1,7 +1,19 @@
+.custom-checkbox
+  .custom-control-label:after
+    top: .2rem
+
 @media (min-width: 576px)
-  .custom-control-label:before
-    top: 5px
+  .custom-checkbox
+    .custom-control-label:after
+      top: .3rem
+
+    .custom-control-label:before
+      top: 5px
 
 @media (min-width: 768px)
-  .custom-control-label:before
-    top: 7px
+  .custom-checkbox
+    .custom-control-label:after
+      top: .45rem
+
+    .custom-control-label:before
+      top: 7px
